--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,17 @@
-.App {
-  text-align: center; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+#navbar {
+  padding: 1rem 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 1px 1px #de1dde; }
+  #navbar img {
+    width: 130px; }
+  #navbar nav {
+    width: 300px; }
+    #navbar nav ul {
+      display: flex;
+      justify-content: space-around; }
+      #navbar nav ul li {
+        list-style: none; }
+        #navbar nav ul li a {
+          text-decoration: none; }
