--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,34 @@
-.App {
-  text-align: center;
-}
+#navbar{
+  padding: 1rem 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow:0px 0px 1px $b60;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+  img{
+    width: 130px;
+  }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+  nav{
+    width: 300px;
 
-.App-title {
-  font-size: 1.5em;
-}
+    ul{
+      display: flex;
+      justify-content: space-around;
+  
+      li{
+        list-style: none;
+        font-weight: 600;
 
-.App-intro {
-  font-size: large;
-}
+        a{
+          text-decoration: none;
+          color: black;
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+          &:visited{
+            color: black;
+          }
+        }
+      }
+    }
+  }
 }
