--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+#navbar {
+  padding: 1rem 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 1px #999999; }
+  #navbar img {
+    width: 130px; }
+  #navbar nav {
+    width: 300px; }
+    #navbar nav ul {
+      display: flex;
+      justify-content: space-around; }
+      #navbar nav ul li {
+        list-style: none;
+        font-weight: 600; }
+        #navbar nav ul li a {
+          text-decoration: none;
+          color: black; }
+          #navbar nav ul li a:visited {
+            color: black; }
+
 body {
   margin: 0;
   padding: 0;
