add sagas, reducer, set actions

--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,7 @@
 
 .main {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  justify-content: space-between; }
 
 body {
   margin: 0;
