--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 1px 1px #de1dde; }
+  box-shadow: 0px 0px 1px #999999; }
   #navbar img {
     width: 130px; }
   #navbar nav {
@@ -12,6 +12,14 @@
       display: flex;
       justify-content: space-around; }
       #navbar nav ul li {
-        list-style: none; }
+        list-style: none;
+        font-weight: 600; }
         #navbar nav ul li a {
-          text-decoration: none; }
+          text-decoration: none;
+          color: black; }
+          #navbar nav ul li a:visited {
+            color: black; }
+
+.main {
+  display: flex;
+  justify-content: space-between; }
