--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,8 @@
 
 .main {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-around; }
+  .main div {
+    padding: 10px;
+    text-align: center;
+    background-color: red; }
