--- a/src/App.scss
+++ b/src/App.scss
@@ -37,5 +37,11 @@
 
 .main{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  
+  div{
+    padding: 10px;    
+    text-align: center;
+    background-color: red;
+  }
 }
