--- a/src/App.scss
+++ b/src/App.scss
@@ -1,47 +1,208 @@
-@import 'vars/_colors.scss';
+@import "vars/_colors.scss";
 
-#navbar{
+h1,
+h3,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+
+  &:hover{
+    color: $b60;
+  }
+}
+
+#navbar {
   padding: 1rem 5rem;
+  margin-bottom: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow:0px 0px 1px $b60;
+  border-bottom: 2px solid $border;
 
-  img{
+  img {
     width: 130px;
   }
 
-  nav{
+  nav {
     width: 300px;
 
-    ul{
+    ul {
       display: flex;
-      justify-content: space-around;
-  
-      li{
+      justify-content: space-between;
+
+      li {
         list-style: none;
         font-weight: 600;
-
-        a{
-          text-decoration: none;
-          color: black;
-
-          &:visited{
-            color: black;
-          }
-        }
       }
     }
   }
 }
 
-.main{
+.main {
   display: flex;
-  justify-content: space-around;
-  
-  div{
-    padding: 10px;    
-    text-align: center;
-    background-color: red;
+  flex-direction: row;
+
+  #guide {
+    width: 50%;
+    padding: 0 2rem 0 5rem;
+  }
+  #list {
+    width: 50%;
+    padding: 0 5rem 0 2rem;
+  }
+
+  // Guide list
+  .guide-list-wrapper {
+    padding: 0 5vw;
+
+    &:first-child {
+      padding-bottom: 42px;
+      border-bottom: 2px solid $border;
+    }
+
+    .list-item {
+      padding: 5% 0 20% 0;
+      margin-top: 5px;
+      text-align: left;
+
+      &.border-top {
+        border-top: 5px solid $border;
+      }
+
+      .guide-item-wrapper {
+        width: 100%;
+        display: flex;
+      }
+
+      .guide-info {
+        padding-right: 5%;
+        width: 70%;
+
+        p {
+          font-size: 0.8rem;
+          margin-bottom: 0;
+        }
+
+        .tags {
+          color: $pumpkinOrange;
+        }
+      }
+      .guide-list-img {
+        border-radius: $borderRadius;
+        overflow: hidden;
+        width: 30%;
+
+        img {
+          width: 100%;
+        }
+      }
+      .author {
+        color: $b60;
+        font-style: italic;
+      }
+    }
+  }
+
+  // Single guide
+  .guide-author {
+    display: flex;
+    margin-bottom: 20px;
+
+    img {
+      width: 60px;
+      height: auto;
+      border-radius: $borderRadius;
+    }
+
+    p {
+      margin: 0 10px;
+    }
+
+    .guide-author-data {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      .guide-actor-name {
+        font-weight: bold;
+      }
+      .guide-time {
+        color: $b60;
+        font-size: 0.85rem;
+      }
+    }
+  }
+  .guide-img {
+    display: flex;
+    max-height: 300px;
+    width: 100%;
+    margin-bottom: 40px;
+
+    img {
+      max-width: 100%;
+      object-fit: cover;
+      border-radius: $borderRadius;
+    }
+  }
+}
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  h3 {
+    color: $green;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 900px) {
+  #list,
+  #guide {
+    padding: 0 1rem !important;
+  }
+  #navbar {
+    padding: 1rem;
+  }
+  .guide-list-wrapper {
+    padding: 0 !important;
+
+    &:first-child {
+      padding-bottom: 42px !important;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .main {
+    flex-direction: column;
+
+    > div {
+      box-sizing: border-box;
+      width: 100% !important;
+      padding: 1rem !important;
+    }
+  }
+
+  #navbar {
+    flex-direction: column;
+
+    nav {
+      margin-top: 25px !important;
+      width: 100%;
+
+      ul {
+        justify-content: space-around;
+      }
+    }
   }
 }
