--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
-@import 'vars/_colors.scss';
-@import 'App.scss';
+@import "vars/_colors.scss";
+@import "App.scss";
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
